<resources>
    <string name="app_name">Android Login Register Form Design</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid or incorrect</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_contact_number">Contact Number</string>
    <string name="action_register">Register</string>
    <string name="title_activity_registation">Register</string>
    <string name="create_account_register">Not Registered?</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="error_incorrect_confirm_password">Incorrect Confirm Password</string>
    <string name="error_invalid_contact">Enter Valid Contact</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
